@@ -31,11 +31,11 @@ extern "C" {
 #endif /* __cplusplus */
 
 #define RB_TYPE_CELL_RENDERER_PIXBUF		(rb_cell_renderer_pixbuf_get_type ())
-#define RB_CELL_RENDERER_PIXBUF(obj)		(GTK_CHECK_CAST ((obj), RB_TYPE_CELL_RENDERER_PIXBUF, RBCellRendererPixbuf))
-#define RB_CELL_RENDERER_PIXBUF_CLASS(klass)	(GTK_CHECK_CLASS_CAST ((klass), RB_TYPE_CELL_RENDERER_PIXBUF, RBCellRendererPixbufClass))
-#define RB_IS_CELL_RENDERER_PIXBUF(obj)		(GTK_CHECK_TYPE ((obj), RB_TYPE_CELL_RENDERER_PIXBUF))
-#define RB_IS_CELL_RENDERER_PIXBUF_CLASS(klass)	(GTK_CHECK_CLASS_TYPE ((klass), RB_TYPE_CELL_RENDERER_PIXBUF))
-#define RB_CELL_RENDERER_PIXBUF_GET_CLASS(obj)  (GTK_CHECK_GET_CLASS ((obj), RB_TYPE_CELL_RENDERER_PIXBUF, RBCellRendererPixbufClass))
+#define RB_CELL_RENDERER_PIXBUF(obj)		(G_TYPE_CHECK_INSTANCE_CAST ((obj), RB_TYPE_CELL_RENDERER_PIXBUF, RBCellRendererPixbuf))
+#define RB_CELL_RENDERER_PIXBUF_CLASS(klass)	(G_TYPE_CHECK_CLASS_CAST ((klass), RB_TYPE_CELL_RENDERER_PIXBUF, RBCellRendererPixbufClass))
+#define RB_IS_CELL_RENDERER_PIXBUF(obj)		(G_TYPE_CHECK_INSTANCE_TYPE ((obj), RB_TYPE_CELL_RENDERER_PIXBUF))
+#define RB_IS_CELL_RENDERER_PIXBUF_CLASS(klass)	(G_TYPE_CHECK_CLASS_TYPE ((klass), RB_TYPE_CELL_RENDERER_PIXBUF))
+#define RB_CELL_RENDERER_PIXBUF_GET_CLASS(obj)  (G_TYPE_CHECK_GET_CLASS ((obj), RB_TYPE_CELL_RENDERER_PIXBUF, RBCellRendererPixbufClass))
 
 typedef struct _RBCellRendererPixbuf RBCellRendererPixbuf;
 typedef struct _RBCellRendererPixbufClass RBCellRendererPixbufClass;
@@ -52,7 +52,7 @@ struct _RBCellRendererPixbufClass
   GtkCellRendererClass parent_class;
 };
 
-GtkType          rb_cell_renderer_pixbuf_get_type (void);
+GType            rb_cell_renderer_pixbuf_get_type (void);
 GtkCellRenderer *rb_cell_renderer_pixbuf_new      (void);
 
 #ifdef __cplusplus
